# foreman

./: Makefile.in  README  conf.cpp  conf.h  config  configure.in  db.cpp  db.h  debug.cpp  debug.h  functor.h  functor.h.in  functor_gen.cpp  main.cpp  os.cpp  os.h  parse.cpp  parse.h  poker.cpp  poker.h  smartptr.h  todo.txt  util.cpp  util.h
